--- a/public/style.css
+++ b/public/style.css
@@ -57,6 +57,11 @@ h2 a {
 .container td {
     font-weight: normal;
     font-size: 1em;
+}
+
+.link {
+    font-weight: normal;
+    font-size: 1em;
   -webkit-box-shadow: 0 2px 2px -2px #0E1119;
      -moz-box-shadow: 0 2px 2px -2px #0E1119;
           box-shadow: 0 2px 2px -2px #0E1119;
