--- a/public/style.css
+++ b/public/style.css
@@ -57,11 +57,6 @@ h2 a {
 .container td {
     font-weight: normal;
     font-size: 1em;
-}
-
-.link {
-    font-weight: normal;
-    font-size: 1em;
   -webkit-box-shadow: 0 2px 2px -2px #0E1119;
      -moz-box-shadow: 0 2px 2px -2px #0E1119;
           box-shadow: 0 2px 2px -2px #0E1119;
@@ -105,7 +100,7 @@ h2 a {
           box-shadow: 0 6px 6px -6px #0E1119;
 }
 
-.container td:hover {
+.link:hover {
   background-color: #FFF842;
   color: #403E10;
   font-weight: bold;
